<resources>
    <string name="app_name">Project_Aura_Bloom</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used in Profile and Home screens -->
    <string name="meditation_time">Meditation Time</string>
    <string name="coloring_stats">Coloring Stats</string>
    <string name="edit">Edit</string>
    <string name="general_information">General Information</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="how_are_you_today">How are you today?</string>
    <string name="location">Location</string>
    <string name="home_screen_panel_scroll">Home screen horizontal panel scroll</string>
    <string name="profile">Profile</string>
    <string name="help_options">Help Options</string>
    <string name="crisis_lifeline">Suicide and Crisis Lifeline</string>
    <string name="call_911">Call 911</string>
    <string name="crisis_text_line">Crisis Text Line</string>
    <string name="emergency_contact">Call Emergency Contact</string>
    <string name="finish_your_profile">Finish your profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="address">Address (optional)</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="cancel">Cancel</string>
    <string name="emergency_contact_name">Emergency Contact Name</string>
    <string name="emergency_contact_phone">Emergency Contact Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="happy_birthday">Happy Birthday!</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="reload_profile">Reload Profile</string>
    <string name="current_achievement">Current Achievement</string>
    <string name="next_milestone">Next Milestone</string>
    <string name="quote_of_the_day">Quote of the Day</string>
    <string name="one">1</string>
    <string name="day">Day</string>
    <string name="days">Days</string>
    <string name="way_to_go">Way to go!\nKeep it going!</string>
    <string name="so_close">You\'re so close!\nKeep going!</string>
    <string name="ten">10</string>

    <!-- Array for State Spinner -->
    <string-array name="us_states">
        <item>AL</item> <item>AK</item> <item>AZ</item> <item>AR</item> <item>CA</item>
        <item>CO</item> <item>CT</item> <item>DE</item> <item>FL</item> <item>GA</item>
        <item>HI</item> <item>ID</item> <item>IL</item> <item>IN</item> <item>IA</item>
        <item>KS</item> <item>KY</item> <item>LA</item> <item>ME</item> <item>MD</item>
        <item>MA</item> <item>MI</item> <item>MN</item> <item>MS</item> <item>MO</item>
        <item>MT</item> <item>NE</item> <item>NV</item> <item>NH</item> <item>NJ</item>
        <item>NM</item> <item>NY</item> <item>NC</item> <item>ND</item> <item>OH</item>
        <item>OK</item> <item>OR</item> <item>PA</item> <item>RI</item> <item>SC</item>
        <item>SD</item> <item>TN</item> <item>TX</item> <item>UT</item> <item>VT</item>
        <item>VA</item> <item>WA</item> <item>WV</item> <item>WI</item> <item>WY</item>
    </string-array>

    <!-- Strings used in Log In Screen -->
    <string name="welcome_back">Welcome Back!</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="log_in_with_sso">Log In with SSO</string>
    <string name="log_in_with_apple">Log In with Apple</string>
    <string name="log_in_with_facebook">Log In with Facebook</string>
    <string name="log_in_with_google">Log In with Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in_button">Log in to Account</string>

    <!-- Strings used in Sign Up Screen -->
    <string name="welcome_to_aurabloom">Welcome\nto\nAUraBloom</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_button">Sign Up for Account</string>
    <string name="show_password">Show Password</string>

    <!--Menu Drawer-->
    <string name="resources_button">Open Resources</string>
    <string name="help">Help</string>
    <string name="exercise">Exercise</string>
    <string name="calm_zone">Calm Zone</string>
    <string name="mood_meter">mood meter</string>
    <string name="fab_email">Fab Email</string>

    <!--Mood Meter Screen-->
    <string name="mood_progress">Mood Progress</string>
    <string name="_50">50%</string>

    <!--Calm Zone Hub-->
    <string name="Calm_Zone_Greeting">Welcome to your world of peace</string>
    <string name="meditation">Meditation</string>
    <string name="ambient_music">Ambient Music</string>
    <string name="peaceful_creations">Peaceful Creations</string>

    <!--Peaceful Creation Hub-->
    <string name="lumos_path">Lumos Path</string>
    <string name="coloring">Coloring</string>
    <string name="mindful_art">Mindful Art</string>

    <!--functionality and service buttons for menu drawer-->
    <string name="settings">Settings</string>
    <string name="help_center">Help Center</string>
    <string name="navigation_drawer_open">Open Menu</string>
    <string name="navigation_drawer_close">Close Menu</string>
    <string name="welcome">Welcome!</string>
    <string name="home">Home</string>
    <string name="sign_out">Sign Out</string>
    <string name="aurabloom">AUraBloom</string>

    <!-- DrawingFragment -->
    <string name="small_brush_size">Small Brush</string>
    <string name="medium_brush_size">Medium Brush</string>
    <string name="large_brush_size">Large Brush</string>
    <string name="erase_size_button">Erase Size Button</string>
    <string name="undo_button">Undo Button</string>
    <string name="redo_button">Redo Button</string>
    <string name="color_picker_button">Color Picker Button</string>
    <string name="small_eraser_size">Small Eraser Size</string>
    <string name="medium_eraser_size">Medium Eraser Size</string>
    <string name="large_eraser_size">Large Eraser Size</string>
    <string name="email_button">Email Button</string>
    <string name="brush_icon">Brush Icon</string>
    <string name="brush_size">Brush Size</string>
    <string name="arrow_up_menu">Arrow Up Menu</string>
    <string name="save_button">Save Button</string>
    <string name="share_button">Share Button</string>
    <string name="small">Small</string>
    <string name="medium">medium</string>
    <string name="large">large</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="arrow_menu">Arrow Menu</string>
    <string name="clear_button">Clear Button</string>
    <string name="large_brush_button">Large Brush Button</string>
    <string name="medium_brush_button">Medium Brush Button</string>
    <string name="small_brush_button">Small Brush Button</string>
    <string name="large_eraser_button">Large Eraser Button</string>
    <string name="medium_eraser_button">Medium Eraser Button</string>
    <string name="small_eraser_button">Small Eraser Button</string>
    <string name="eraser_icon">Eraser Button</string>


    <!-- Help Center Strings -->
    <string name="options_learn_more">Select an option to learn more</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>



    <!--Meditation Screen-->
    <string name="welcome_meditation">Welcome Meditation</string>
    <string name="AUrabloom">Audio by AUraBloom</string>
    <string name="welcome_meditation_cover">Welcome meditation cover</string>
    <string name="previous_audio_button">Previous Track</string>
    <string name="play_audio_button">Play</string>
    <string name="next_audio_button">Next Track</string>
    <string name="low_volume_icon">Decrease Volume</string>
    <string name="increase_volume_icon">Increase Volume</string>



    <!-- Privacy Policy Fragment -->
    <string name="privacy_policy_content">Privacy Policy will go here</string>

    <string name="hello_blank_fragment">Hello blank Fragment</string>
    <string name="how_are_you_feeling_today">How are you feeling today?</string>
    <string name="happy">Happy</string>
    <string name="just_happy">Just happy</string>
    <string name="confirm_mood">Confirm Mood</string>
    <string name="how_are_you">How %1$s are you?</string>
    <string name="today_s_date">Today\'s Date</string>
    <string name="emotion_s_here">Emotion(s) here</string>
    <string name="customization_options_drawer">Customization Options Drawer</string>
    <string name="leave_journal">Leave journal</string>
    <string name="type_your_thoughts_here">Type your thoughts here…</string>
    <string name="submit">Submit</string>
    <string name="app_icon">App Icon</string>
    <string name="mood_stats">Mood Journey Stats</string>
    <string name="read_terms">Read Terms and Conditions</string>
    <string name="terms_agree">I agree to the Terms and Conditions</string>
    <string name="animated_profile_picture">Animated Profile Picture</string>
    <string name="pick_a_pic">Pick a Pic</string>
    <string name="clear_background">Clear Background</string>
    <string name="photo_view">Photo View</string>


</resources>