<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/save"
        android:icon="@drawable/save_24dp"
        android:title="@string/save"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/share"
        android:icon="@drawable/share_24dp"
        android:title="@string/share"
        app:showAsAction="always"/>

    <item
        android:id="@+id/pick_a_pic"
        android:icon="@drawable/add_photo_24dp"
        android:title="@string/pick_a_pic"
        app:showAsAction="always"/>

    <item
        android:id="@+id/clear_photo"
        android:icon="@drawable/close"
        android:title="@string/clear_background"
        app:showAsAction="ifRoom"/>
</menu>