<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mindful_art_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DrawingFragment">

    <com.example.project_aura_bloom.DrawingView
        android:id="@+id/drawing_canvas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/drawing_menubar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.example.project_aura_bloom.EraserCircleView
        android:id="@+id/eraser_circle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>


    <LinearLayout
        android:id="@+id/drawing_menubar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <ImageButton
            android:id="@+id/brush_size_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@string/brush_icon"
            android:src="@drawable/brush_24dp" />

        <ImageButton
            android:id="@+id/erase_size_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@string/eraser_icon"
            android:src="@drawable/eraser_24dp" />

        <ImageButton
            android:id="@+id/undo_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@string/undo_button"
            android:src="@drawable/undo_24dp" />

        <ImageButton
            android:id="@+id/redo_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@string/redo_button"
            android:src="@drawable/redo_24dp" />

        <ImageButton
            android:id="@+id/color_picker_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@string/color_picker_button"
            android:src="@drawable/palette_24dp" />

        <ImageButton
            android:id="@+id/clear_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@string/clear_button"
            android:src="@drawable/close" />

        <ImageButton
            android:id="@+id/arrow_menu_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@string/arrow_menu"
            android:src="@drawable/arrow_up_24dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>