<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:padding="16dp">


    <TextView
        android:id="@+id/journal_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today_s_date"
        android:textSize="18sp"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/selected_mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emotion_s_here"
        android:textSize="18sp"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
            android:id="@+id/journal_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_arrow"
            android:contentDescription="@string/leave_journal"
            app:layout_constraintTop_toBottomOf="@id/journal_date"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#FFFFFF"/>

    <ScrollView
            android:id="@+id/journal_scrolling"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="65dp"
            android:layout_marginBottom="100dp"
            app:layout_constraintTop_toBottomOf="@id/journal_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
                android:id="@+id/journal_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

            <EditText
                android:id="@+id/journal_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/type_your_thoughts_here"
                android:autofillHints="autofill_notes"
                android:gravity="top"
                android:background="#CCCCCC"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:inputType="textMultiLine"
                android:minLines="25"
                android:scrollbars="vertical"/>


        </LinearLayout>

    </ScrollView>

    <Button
            android:id="@+id/submit_journal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/custom_options_drawer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/customization_options_drawer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
            />

</androidx.constraintlayout.widget.ConstraintLayout>